# Sirius_2022

./: README.md
C++/task_2/: CMakeLists.txt  main.cpp  parse_arguments.cpp  points.txt  read_points.cpp  read_points.h
C++/task_2/src/: NOTCMakeLists.txt  check_point.cpp  check_point.h  parse_arguments.cpp  parse_arguments.h  read_points.cpp  read_points.h
C++/task_4/: .gdb_history  CMakeLists.txt  Submatrix.h  dijkstra.h  djkstra.cpp  gdb-test  main  main.cpp  main_deijkstra.cpp  read_8bit_png.cpp
C++/task_4/dijkstra/: dijkstra.cpp  dijkstra.h
C++/task_4/matrix/: CMakeLists.txt  Matrix.cpp
C++/task_4/src/: main.cpp  main_deijkstra.cpp
C++/task_4/src/dijkstra/: CMakeLists.txt
C++/task_4/src/load_png/: CMakeLists.txt
C++/task_4/src/matrix/: Matrix.h
C++/task_6/: CMakeLists.txt  COO.hpp  CSR.hpp  DenseMatrix.hpp  MatrixAbstract.hpp  SparseMatrixAbstract.hpp  main.cpp  matrix.txt
C++/task_7/: CGNE.hpp  CMakeLists.txt  Script_CGNE.ipynb  main.cpp  matrix2.txt  matrix_b.txt
C++/task_7/.ipynb_checkpoints/: Script_CGNE-checkpoint.ipynb
C++/task_7/matrix/: CMakeLists.txt  COO.hpp  CSC.hpp  DenseMatrix.hpp
Nikolaev_N/: missile_test.py  result.txt  targets.txt  task_3.py
